new version. fixed resize after change in dom subtree

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Scroll",
+  "name": "scroll",
   "version": "0.0.0",
   "authors": [
     "alexeybondarenko <alexeybondarenko@me.com>"
